Table dim_clients {
    client_id varchar [pk]
    company_id int
    people_id int
    sales_rep_id int
}

Table dim_people {
    people_id int [pk, increment]
    first_name varchar
    last_name varchar
    email varchar
    address varchar
}

Table dim_client_contact_status {
    status_id int [pk, increment]
    client_id int 
    people_id int
    can_email boolean
    can_call boolean
}

Table dim_company {
    company_id int
    company varchar
}

Table dim_sales_rep {
    sales_rep_id int [pk, increment] 
    name varchar 
    people_id int  
}

Ref: dim_sales_rep.people_id > dim_people.people_id
Ref: dim_clients.company_id > dim_company.company_id
Ref: dim_clients.people_id > dim_people.people_id
Ref: dim_clients.client_id > dim_client_contact_status.client_id
Ref: dim_clients.sales_rep_id > dim_sales_rep.sales_rep_id
Ref: dim_client_contact_status.people_id > dim_people.people_id